--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <meta name="description" content="CALL 0718301634" />
         <meta name="author" content="RobiTech Solutions"/>
         <title>RobiTech Solutions. Marketing WEBSITES.</title>
-        <meta property="og:url" content="https://robitechsolutions.github.io" />
         <meta property="og:type" content="Business Website"/>
         <meta property="og:title" content="RobiTech Solutions" />
         <meta property="og:description" content="WEBSITES,CALL 0718301634" />
@@ -47,7 +46,14 @@
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
             <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#about">SEE HOME PAGE</a>
-            <a href="https://wa.me/254718301634"> <i class="fa fa-whatsapp" style="font-size: 1.6rem; color:#1F51FF;"><i/></a>
+            <a href="https://wa.me/254718301634"  style="font-size: 1.6rem; color:#1F51FF;"><b>WhatsApp</b></a>
+            <br>                                                                             
+            <div style="display: block;">
+              <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style="display: inline-block; color: white; font-size: 1.6rem;"></i></a>
+              <a href="https://mobile.twitter.com/writers_fast"><i class="fa fa-twitter" style="display: inline-block; color: white; font-size: 1.6rem;"></i></a>
+              <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="display: inline-block; color: white; font-size: 1.6rem;"></i></a>
+           </div>
+         </div>  
         <section class="fluid-container justify-items-center text-white pxy-1" id="about" style="background-color:#3F00FF;">
          <div class="container">
           <h2><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
