--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
             <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#about">SEE HOME PAGE</a>
-            <a href="https://wa.me/254718301634"  style="font-size: 1.6rem; color:#1F51FF;"><b>WhatsApp</b></a>
+            <b>WhatsApp</b>                                                                                    
+            <a href="https://wa.me/254718301634"  style="font-size: 1.6rem; color:#1F51FF;"></a>
             <br>                                                                             
-            <div style="display: block;">
+            <div style="display: block; align-self: right;">
               <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style="display: inline-block; color: white; font-size: 1.6rem;"></i></a>
               <a href="https://mobile.twitter.com/writers_fast"><i class="fa fa-twitter" style="display: inline-block; color: white; font-size: 1.6rem;"></i></a>
               <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="display: inline-block; color: white; font-size: 1.6rem;"></i></a>
