--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <br>
             <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#about">SEE HOME PAGE</a>
             <b>WhatsApp</b>
+            <a href="https://wa.me/254718301634"  style="font-size: 1.6rem; color:#1F51FF;"><i class="fa fa-whatsapp"></i></a>                                                                                    
             <br>
-            <p style="color:white;">Follow Me</p>                                                                                     
-            <a href="https://wa.me/254718301634"  style="font-size: 1.6rem; color:#1F51FF;"><i class="fa fa-whatsapp"></i></a>                                                                                                                                                                       <b>Follow Us</b>                                                                                    
+            <p style="color:white;">Follow Me</p>                                                                                                                                                                                                                                                            <b>Follow Us</b>                                                                                    
             <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style="display: inline-block; color: white; font-size: 1.6rem;"></i></a>
             <a href="https://mobile.twitter.com/writers_fast"><i class="fa fa-twitter" style="display: inline-block; color: white; font-size: 1.6rem;"></i></a>
             <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="display: inline-block; color: white; font-size: 1.6rem;"></i></a>
