--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             <b>WhatsApp</b>
             <a href="https://wa.me/254718301634"  style="font-size: 1.6rem; color:#1F51FF;"><i class="fa fa-whatsapp"></i></a>                                                                                    
             <br>
-            <p style="color:#1F51FF;">Follow Me</p>                                                                                                                                                                                                 
-            <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style="display: inline-block; color: white; font-size: 1.6rem;"></i></a>
-            <a href="https://mobile.twitter.com/writers_fast"><i class="fa fa-twitter" style="display: inline-block; color: white; font-size: 1.6rem;"></i></a>
-            <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="display: inline-block; color: white; font-size: 1.6rem;"></i></a>
+            <b style="color:#1F51FF;">Follow Me</b>                                                                                                                                                                                                 
+            <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style=" color: white; font-size: 1.6rem;"></i></a>
+            <a href="https://mobile.twitter.com/writers_fast"><i class="fa fa-twitter" style=" color: white; font-size: 1.6rem;"></i></a>
+            <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="color: white; font-size: 1.6rem;"></i></a>
          </div>  
         <section class="fluid-container justify-items-center text-white pxy-1" id="about" style="background-color:#3F00FF;">
          <div class="container">
