--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
             <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#about">SEE HOME PAGE</a>
-            <b>WhatsApp</b>
+            <b style="font-size: 0.3rem;">Need help? Chat me.</b>
             <a href="https://wa.me/254718301634"  style="font-size: 1.6rem; color:#1F51FF;"><i class="fa fa-whatsapp"></i></a>                                                                                    
             <br>
             <b style="color:#1F51FF;">Follow Me</b>                                                                                                                                                                                                 
@@ -120,18 +120,9 @@
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div> 
        </section>
-        <section class="fluid-container justify-items-center text-white pxy-1" id="media_pages" style="background-color:#0B0B45;">
-          <div class="container">
-           <h2><b>COMMUNITY</b></h2>
-           <div style="display: block;">
-              <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style="display: inline-block; color: white; font-size: 5rem;"></i></a>
-              <a href="https://mobile.twitter.com/writers_fast"><i class="fa fa-twitter" style="display: inline-block; color: white; font-size: 5rem;"></i></a>
-              <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="display: inline-block; color: white; font-size: 5rem;"></i></a>
-           </div>
-          </div>
-        </section>
-        <!-- Footer-->
-            <div class="fluid-container text-white" style="background-color:#1F51FF;">
+       
+      <!-- Footer-->
+            <div class="fluid-container text-white" style="background-color::#0B0B45;">
                 <p class="container text-center">Copyright &copy; RobiTech Solutions 2023</p>
             </div>
         <!-- Bootstrap core JS-->
