--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
             <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#about">SEE HOME PAGE</a>
-            <b style="font-size: 0.3rem;">Need help? Chat me.</b>
+            <b style="font-size: 0.5rem;">Need help? Chat me.</b>
             <a href="https://wa.me/254718301634"  style="font-size: 1.6rem; color:#1F51FF;"><i class="fa fa-whatsapp"></i></a>                                                                                    
             <br>
             <b style="color:#1F51FF;">Follow Me</b>                                                                                                                                                                                                 
@@ -122,7 +122,7 @@
        </section>
        
       <!-- Footer-->
-            <div class="fluid-container text-white" style="background-color::#0B0B45;">
+            <div class="fluid-container text-white" style="background-color:#0B0B45;">
                 <p class="container text-center">Copyright &copy; RobiTech Solutions 2023</p>
             </div>
         <!-- Bootstrap core JS-->
