--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </nav>
         <!-- Header-->
-        <div class="fluid-container justify-items-center text-white pxy-1" style="background-color:#0B0B45;">
+        <div class="fluid-container justify-items-center text-white py-1" style="background-color:#0B0B45;">
             <form class="form-inline container">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
@@ -54,7 +54,7 @@
             <a href="https://mobile.twitter.com/writers_fast"><i class="fa fa-twitter" style=" color: white; font-size: 1.6rem;"></i></a>
             <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="color: white; font-size: 1.6rem;"></i></a>
          </div>  
-        <section class="fluid-container justify-items-center text-white pxy-1" id="about" style="background-color:#3F00FF;">
+        <section class="fluid-container justify-items-center text-white py-1" id="about" style="background-color:#3F00FF;">
          <div class="container">
           <h2><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
           <p>
@@ -62,7 +62,7 @@
           </p>
          </div>
        </section> 
-        <section class="fluid-container justify-items-center text-white pxy-1" id="services" style="background-color:#0B0B45;">
+        <section class="fluid-container justify-items-center text-white py-1" id="services" style="background-color:#0B0B45;">
            <div class="container">
             <h2><b>SERVICES</b></h2>
             <h1><b>Websites</b></h1>
@@ -113,7 +113,7 @@
            </p>
          </div>
         </section>
-        <section class="fluid-container text-white justify-items-center pxy-1" id="contact" style="background-color:#3F00FF;">  
+        <section class="fluid-container text-white justify-items-center py-1" id="contact" style="background-color:#3F00FF;">  
          <div class="container">
 <h2><b>CONTACT ROBITECH SOLUTIONS</b></h2>
           <li><i class="fa fa-phone" style="font-size: x-large;">  <b>+254718301634</b></i></li>
