--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav style="">
-            <div class="container px-4">
+            <div class="container px-2">
+                  <img src="/robitechlogo.png" alt="Robitech Logo" height="36">                      
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
@@ -34,11 +35,10 @@
                     </ul>
                 </div>
                 <a class="navbar-brand" href="#page-top">ROBITECH SOLUTIONS</a>
-                <img src="/robitechlogo.png" alt="Robitech Logo" height="36">
             </div>
         </nav>
         <!-- Header-->
-        <div class="fluid-container justify-items-center text-white py-1" style="background-color:#0B0B45;">
+        <div class="fluid-container justify-items-center text-white py-2" style="background-color:#0B0B45;">
             <form class="form-inline container">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
@@ -54,7 +54,7 @@
             <a href="https://mobile.twitter.com/writers_fast"><i class="fa fa-twitter" style=" color: white; font-size: 1.6rem;"></i></a>
             <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="color: white; font-size: 1.6rem;"></i></a>
          </div>  
-        <section class="fluid-container justify-items-center text-white py-1" id="about" style="background-color:#3F00FF;">
+        <section class="fluid-container justify-items-center text-white py-2" id="about" style="background-color:#3F00FF;">
          <div class="container">
           <h2><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
           <p>
@@ -62,7 +62,7 @@
           </p>
          </div>
        </section> 
-        <section class="fluid-container justify-items-center text-white py-1" id="services" style="background-color:#0B0B45;">
+        <section class="fluid-container justify-items-center text-white py-2" id="services" style="background-color:#0B0B45;">
            <div class="container">
             <h2><b>SERVICES</b></h2>
             <h1><b>Websites</b></h1>
@@ -120,7 +120,8 @@
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div> 
        </section>
-       
+                                                                 
+        <img src="/robitechlogo.png" alt="Robitech Logo" height="36" class="px-4">
       <!-- Footer-->
             <div class="fluid-container text-white" style="background-color:#0B0B45;">
                 <p class="container text-center">Copyright &copy; RobiTech Solutions 2023</p>
