--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </nav>
         <!-- Header-->
-        <div class="fluid-container justify-items-center text-white py-3" style="background-color:#0B0B45;">
+        <div class="fluid-container justify-items-center text-white py-4" style="background-color:#0B0B45;">
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
             <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#about">SEE HOME PAGE</a>
@@ -50,7 +50,7 @@
             <a href="https://mobile.twitter.com/writers_fast"><i class="fa fa-twitter" style=" color: white; font-size: 1.6rem;"></i></a>
             <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="color: white; font-size: 1.6rem;"></i></a>
          </div>  
-        <section class="fluid-container justify-items-center text-white py-3" id="about" style="background-color:#3F00FF;">
+        <section class="fluid-container justify-items-center text-white py-4" id="about" style="background-color:#3F00FF;">
          <div class="container">
           <h2><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
           <p>
@@ -58,7 +58,7 @@
           </p>
          </div>
        </section> 
-        <section class="fluid-container justify-items-center text-white py-3" id="services" style="background-color:#0B0B45;">
+        <section class="fluid-container justify-items-center text-white py-4" id="services" style="background-color:#0B0B45;">
            <div class="container">
             <h2><b>SERVICES</b></h2>
             <h1><b>Websites</b></h1>
@@ -102,24 +102,23 @@
               <b>KES 24999</b>
             </div>
            </div>
-             <h1><b>Website Maintenance</b></h1>
-           <p>   
+           <p class="py-3"> 
+               <h1><b>Website Maintenance</b></h1>                             
              In case you are not conversant with website maintenance practices such as hosting or web content update, RobiTech Solutions can handle that at your budget.
               <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#contact">GET A QUOTE</a>   
            </p>
          </div>
         </section>
-        <section class="fluid-container text-white justify-items-center py-3" id="contact" style="background-color:#3F00FF;">  
+        <section class="fluid-container text-white justify-items-center py-4" id="contact" style="background-color:#3F00FF;">  
          <div class="container">
 <h2><b>CONTACT ROBITECH SOLUTIONS</b></h2>
-          <li><i class="fa fa-phone" style="font-size: x-large;">  <b>+254718301634</b></i></li>
-          <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
+          <li><i class="fa fa-phone" style="font-size: x-large; list-type: none;">  <b>+254718301634</b></i></li>
+          <li><i class="fa fa-envelope" style="font-size: large; list-type: none;">  <b>musilarobert93@gmail.com</b></i></li>
          </div> 
        </section>
-                                                                 
-        <img src="/robitechlogo.png" alt="Robitech Logo" height="50" class="pxy-2">
+                                                        
       <!-- Footer-->
-            <div class="fluid-container text-white" style="background-color:#0B0B45;">
+            <div class="fluid-container text-white py-4" style="background-color:#0B0B45;">
                 <p class="container text-center">Copyright &copy; RobiTech Solutions 2023</p>
             </div>
         <!-- Bootstrap core JS-->
