--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <b>Branding/Portfolio Websites</b>
         </div>
         <div class="card-body text-white" style="background-color:#1F51FF;">
-          <ul>
+          <ul class="px-2">
               <li>Social media integration</li>
               <li>Includes domain</li>
               <li>Content development</li>
@@ -89,7 +89,7 @@
             <b>Business Websites</b>
             </div>
             <div class="card-body text-white" style="background-color:#1F51FF;">
-              <ul>
+              <ul class="px-2">
                   <li>Social media integration</li>
                   <li>Includes domain</li>
                   <li>Content development</li>
@@ -112,11 +112,21 @@
         <section class="fluid-container text-white justify-items-center py-4" id="contact" style="background-color:#3F00FF;">  
          <div class="container">
 <h2><b>CONTACT ROBITECH SOLUTIONS</b></h2>
+         <ul type="list-type: none;">                       
           <li><i class="fa fa-phone" style="font-size: x-large; list-type: none;">  <b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large; list-type: none;">  <b>musilarobert93@gmail.com</b></i></li>
          </div> 
        </section>
-                                                        
+                                                                                  
+<section class="container pxy-4 text-white" style="background-color: #1F51FF;">
+ <h2 style="align-self: center;"><b>MY CLIENTS</b></h2>
+ <a href="http://jmedianetworktv.github.io">
+  <img class="img-fluid" src="/jmedia.jpg" alt="JMedia Network TV logo">
+ </a>
+ <a href="http://choppa254.github.io">
+  <img class="img-fluid" src="/choppa.jpeg" alt="Chopa 254 logo">
+ </a>
+</section>                                                 
       <!-- Footer-->
             <div class="fluid-container text-white py-4" style="background-color:#0B0B45;">
                 <p class="container text-center">Copyright &copy; RobiTech Solutions 2023</p>
