--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
             Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Why not try RobiTech Solutions?
              Check out the pricing.
         </p>
-  <div class="card">
+  <div class="card px-3">
     <div class="card-header text-white" style="background-color:#1F51FF;">
         <b>Branding/Portfolio Websites</b>
         </div>
         <div class="card-body text-white" style="background-color:#1F51FF;">
-          <ul class="px-4">
+          <ul>
               <li>Social media integration</li>
               <li>Includes domain</li>
               <li>Content development</li>
@@ -89,7 +89,7 @@
             <b>Business Websites</b>
             </div>
             <div class="card-body text-white" style="background-color:#1F51FF;">
-              <ul class="px-4">
+              <ul>
                   <li>Social media integration</li>
                   <li>Includes domain</li>
                   <li>Content development</li>
@@ -122,12 +122,12 @@
  <h2 style="align-self: center;"><b>MY CLIENTS</b></h2>
 <div class="container">                                
  <a href="http://jmedianetworktv.github.io">
-  <img height="120" width="120"  src="/jmedia.jpg" alt="JMedia Network TV logo">
+  <img height="150" width="150"  src="/jmedia.jpg" alt="JMedia Network TV logo">
  </a>
 </div>
 <div class="container">                                                                               
- <a href="http://choppa254.github.io">
-  <img height="120" width="120" src="/choppa.jpeg" alt="Chopa 254 logo">
+ <a href="http://choppa254.github.io" class="py-2">
+  <img height="150" width="150" src="/choppa.jpeg" alt="Chopa 254 logo">
  </a>
 </div>                                                                
 </section>                                                 
