--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@200;300&display=swap" rel="stylesheet"> 
     </head>
-    <body id="page-top">
+    <body id="page-top" style="background-color:white;>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav style="">
             <div class="container px-2">
@@ -38,19 +38,19 @@
             </div>
         </nav>
         <!-- Header-->
-        <div class="fluid-container justify-items-center text-white py-4" style="background-color:#0B0B45;">
+        <div class="fluid-container justify-items-center py-4" >
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
-            <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#about">SEE HOME PAGE</a>
+            <a class="btn btn-lg col-lg-8 justify-content-center bg-white text-black" href="#about">SEE HOME PAGE</a>
             <b style="font-size: 0.5rem;">Need help? Chat me.</b>
             <a href="https://wa.me/254718301634"  style="font-size: 1.6rem; color:#1F51FF;"><i class="fa fa-whatsapp"></i></a>                                                                                    
             <br>
             <b style="color:#1F51FF;">Follow Me</b>                                                                                                                                                                                                 
-            <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style=" color: white; font-size: 1.6rem;"></i></a>
-            <a href="https://mobile.twitter.com/writers_fast"><i class="fa fa-twitter" style=" color: white; font-size: 1.6rem;"></i></a>
-            <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="color: white; font-size: 1.6rem;"></i></a>
+            <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style=" color: black; font-size: 1.6rem;"></i></a>
+            <a href="https://mobile.twitter.com/writers_fast"><i class="fa fa-twitter" style=" color: black; font-size: 1.6rem;"></i></a>
+            <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="color: black; font-size: 1.6rem;"></i></a>
          </div>  
-        <section class="fluid-container justify-items-center text-white py-4" id="about" style="background-color:#3F00FF;">
+        <section class="fluid-container justify-items-center  py-4" id="about" style="color:#3F00FF;">
          <div class="container">
           <h2><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
           <p>
@@ -58,13 +58,13 @@
           </p>
          </div>
        </section> 
-        <section class="fluid-container justify-items-center text-white py-4" id="services" style="background-color:#0B0B45;">
+        <section class="fluid-container justify-items-center py-4" id="services" >
            <div class="container">
-            <h2><b>SERVICES</b></h2>
-            <h1><b>Websites</b></h1>
-         <p>
+            <h2 style="color:#0B0B45;"><b>SERVICES</b></h2>
+            <h1 style="color:#0B0B45;"><b>Websites</b></h1>
+         <p  style="color:#0B0B45;">
             A great brand or business deserves a modern web page that will reach a greater audience out there. RobiTech Solutions will develop a beautiful and search engine optimised business website that will draw more traffic to your social media pages and YouTube channel.
-            Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Why not try RobiTech Solutions?
+          Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Why not try RobiTech Solutions?
              Check out the pricing.
         </p>
   <div class="card px-3">
@@ -98,23 +98,23 @@
               <b>KES 24999</b>
             </div>
            </div>
-           <p class="py-3"> 
-               <h1><b>Website Maintenance</b></h1>                             
+           <p class="py-3"  style="color:#0B0B45;"> 
+               <h1  style="color:#0B0B45;"><b>Website Maintenance</b></h1>                             
              In case you are not conversant with website maintenance practices such as hosting or web content update, RobiTech Solutions can handle that at your budget.
-              <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#contact">GET A QUOTE</a>   
+              <a class="btn btn-lg col-lg-8 justify-content-center bg-white text-black" href="#contact">GET A QUOTE</a>   
            </p>
          </div>
         </section>
-        <section class="fluid-container text-white justify-items-center py-4" id="contact" style="background-color:#3F00FF;">  
+        <section class="fluid-container justify-items-center py-4" id="contact"  style="color:#3F00FF;">  
          <div class="container">
 <h2><b>CONTACT ROBITECH SOLUTIONS</b></h2>
-         <ul style="list-type: none;">                       
+         <ul style="list-style-type: none;">                       
           <li><i class="fa fa-phone" style="font-size: x-large;">  <b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div> 
        </section>
                                                                                   
-<section class="container py-4 text-white" style="background-color: #1F51FF;">
+<section class="container py-4" style="color: #1F51FF;">
  <h2 style="align-self: center;"><b>MY CLIENTS</b></h2>
 <div class="container">                                
  <a href="http://jmedianetworktv.github.io">
@@ -128,7 +128,7 @@
 </div>                                                                
 </section>                                                 
       <!-- Footer-->
-            <div class="fluid-container text-white py-4" style="background-color:#0B0B45;">
+            <div class="fluid-container py-4" style="color:#0B0B45;">
                 <p class="container text-center">Copyright &copy; RobiTech Solutions 2023</p>
             </div>
         <!-- Bootstrap core JS-->
