--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@200;300&display=swap" rel="stylesheet"> 
     </head>
-    <body id="page-top" style="background-color:white;>
+    <body id="page-top" style="background-color:grey;>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav style="">
             <div class="container px-2">
