--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav style="">
             <div class="container px-2">
                   <img src="/robitechlogo.png" alt="Robitech Logo" height="36">                      
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" style="color:#0B0B45;"><span class="navbar-toggler-icon" style="color:#0B0B45;"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about"><b>HOME</b></a></li>
@@ -41,7 +41,7 @@
         <div class="fluid-container justify-items-center py-4" >
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
-            <a class="btn btn-lg col-lg-8 justify-content-center bg-white text-black" href="#about">SEE HOME PAGE</a>
+            <a class="btn btn-lg col-lg-8 justify-content-center bg-bs text-black" href="#about">SEE HOME PAGE</a>
             <b style="font-size: 0.5rem;">Need help? Chat me.</b>
             <a href="https://wa.me/254718301634"  style="font-size: 1.6rem; color:#1F51FF;"><i class="fa fa-whatsapp"></i></a>                                                                                    
             <br>
@@ -68,10 +68,10 @@
              Check out the pricing.
         </p>
   <div class="card px-3">
-    <div class="card-header text-white" style="background-color:#1F51FF;">
+    <div class="card-header text-white" style="background-color:#0B0B45;">
         <b>Branding/Portfolio Websites</b>
         </div>
-        <div class="card-body text-white" style="background-color:#1F51FF;">
+        <div class="card-body text-white" style="background-color:#0B0B45;">
           <ul>
               <li>Social media integration</li>
               <li>Includes domain</li>
@@ -81,10 +81,10 @@
         <div class="card-footer text-muted">
           <b>KES 14999</b>
         </div>
-        <div class="card-header text-white" style="background-color:#1F51FF;">
+        <div class="card-header text-white" style="background-color:#0B0B45;">
             <b>Business Websites</b>
             </div>
-            <div class="card-body text-white" style="background-color:#1F51FF;">
+            <div class="card-body text-white" style="background-color:#0B0B45;">
               <ul>
                   <li>Social media integration</li>
                   <li>Includes domain</li>
@@ -99,16 +99,16 @@
             </div>
            </div>
            <p class="py-3"  style="color:#0B0B45;"> 
-               <h1  style="color:#0B0B45;"><b>Website Maintenance</b></h1>                             
+             <h1 style="color:#0B0B45;"><b>Website Maintenance</b></h1>                 
              In case you are not conversant with website maintenance practices such as hosting or web content update, RobiTech Solutions can handle that at your budget.
-              <a class="btn btn-lg col-lg-8 justify-content-center bg-white text-black" href="#contact">GET A QUOTE</a>   
+              <a class="btn btn-lg col-lg-8 justify-content-center bg-bs text-black" href="#contact">GET A QUOTE</a>   
            </p>
          </div>
         </section>
         <section class="fluid-container justify-items-center py-4" id="contact"  style="color:#3F00FF;">  
          <div class="container">
 <h2><b>CONTACT ROBITECH SOLUTIONS</b></h2>
-         <ul style="list-style-type: none;">                       
+         <ul style="list-type-style: none;">                       
           <li><i class="fa fa-phone" style="font-size: x-large;">  <b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div> 
