--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     </head>
     <body id="page-top" style="background-color:grey;>
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav style="">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top" id="mainNav style="">
             <div class="container px-2">
                   <img src="/robitechlogo.png" alt="Robitech Logo" height="36">                      
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" style="background-color:#0B0B45;"><span class="navbar-toggler-icon" style="color:white;"></span></button>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about"><b>HOME</b></a></li>
@@ -41,7 +41,7 @@
         <div class="fluid-container justify-items-center py-4" >
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
-            <a class="btn btn-lg col-lg-8 justify-content-center bg-bs text-black" href="#about">SEE HOME PAGE</a>
+            <a class="btn btn-lg col-lg-8 justify-content-center bg-white text-black" href="#about">SEE HOME PAGE</a>
             <b style="font-size: 0.5rem;">Need help? Chat me.</b>
             <a href="https://wa.me/254718301634"  style="font-size: 1.6rem; color:#1F51FF;"><i class="fa fa-whatsapp"></i></a>                                                                                    
             <br>
