--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top" id="mainNav style="">
             <div class="container px-2">
                   <img src="/robitechlogo.png" alt="Robitech Logo" height="36">                      
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about"><b>HOME</b></a></li>
@@ -33,6 +32,7 @@
                         <li class="nav-item"><a class="nav-link" href="#contact"><b>Contact</b></a></li>
                         <li class="nav-item"><a class="nav-link" href="#media_pages"><b>Follow Us</b></a></li>
                     </ul>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><b>MENU<b/><span class="navbar-toggler-icon" style="color-white;"></span></button>
                 </div>
                 <a class="navbar-brand" href="#page-top">ROBITECH SOLUTIONS</a>
             </div>
