--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
     </head>
     <body id="page-top" style="background-color:grey;>
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top" id="mainNav style="">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav style="">
             <div class="container px-2">
                   <img src="/robitechlogo.png" alt="Robitech Logo" height="36"> 
-                 <a class="navbar-brand" href="#page-top">ROBITECH SOLUTIONS</a>
+                 <a class="navbar-brand" href="#page-top"><b>ROBITECH SOLUTIONS</b></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><b>MENU</b><span class="navbar-toggler-icon" style="color-white;"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about"><b>HOME</b></a></li>
                         <li class="nav-item"><a class="nav-link" href="#services"><b>Services</b></a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact"><b>Contact</b></a></li>
-                        <li class="nav-item"><a class="nav-link" href="#media_pages"><b>Follow Us</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="#media_pages"><b>Follow Me</b></a></li>
                     </ul>
                 </div>
             </div>
@@ -40,7 +40,7 @@
         <div class="fluid-container justify-items-center py-4" >
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
-            <a class="btn btn-lg col-lg-8 justify-content-center bg-white text-black" href="#about">SEE HOME PAGE</a>
+            <a class="btn btn-lg col-lg-8 justify-content-center bg-light text-black" href="#about"><b>See Home Page</b></a>
             <b style="font-size: 0.5rem;">Need help? Chat me.</b>
             <a href="https://wa.me/254718301634"  style="font-size: 1.6rem; color:#1F51FF;"><i class="fa fa-whatsapp"></i></a>                                                                                    
             <br>
@@ -100,14 +100,14 @@
            <p class="py-3"  style="color:#0B0B45;"> 
              <h1 style="color:#0B0B45;"><b>Website Maintenance</b></h1>                 
              In case you are not conversant with website maintenance practices such as hosting or web content update, RobiTech Solutions can handle that at your budget.
-              <a class="btn btn-lg col-lg-8 justify-content-center bg-bs text-black" href="#contact">GET A QUOTE</a>   
+              <a class="btn btn-lg col-lg-8 justify-content-center bg-light text-black" href="#contact"><b>Get A Quote</b></a>   
            </p>
          </div>
         </section>
         <section class="fluid-container justify-items-center py-4" id="contact"  style="color:#3F00FF;">  
          <div class="container">
 <h2><b>CONTACT ROBITECH SOLUTIONS</b></h2>
-         <ul style="list-type-style: none;">                       
+         <ul style="list-type: none;">                       
           <li><i class="fa fa-phone" style="font-size: x-large;">  <b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div> 
@@ -128,7 +128,7 @@
 </section>                                                 
       <!-- Footer-->
             <div class="fluid-container py-4" style="color:#0B0B45;">
-                <p class="container text-center">Copyright &copy; RobiTech Solutions 2023</p>
+                <b><p class="container text-center">Copyright &copy; RobiTech Solutions 2023</p></b>
             </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
