--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="container px-2">
                   <img src="/robitechlogo.png" alt="Robitech Logo" height="36"> 
                  <a class="navbar-brand" href="#page-top"><b>ROBITECH SOLUTIONS</b></a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><b>MENU</b><span class="navbar-toggler-icon" style="color-white;"></span></button>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><b>MENU</b><span class="navbar-toggler-icon" style="color:black;"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about"><b>HOME</b></a></li>
