--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav style="">
             <div class="container px-2">
                   <img src="/robitechlogo.png" alt="Robitech Logo" height="36"> 
-                 <a class="navbar-brand" href="#page-top" style="font-size: 1.5rem;><b>ROBITECH SOLUTIONS</b></a>
+                 <a class="navbar-brand" href="#page-top" style="font-size: 1.5rem;"><b>ROBITECH SOLUTIONS</b></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><b>MENU</b><span class="navbar-toggler-icon" style="color:black;"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
