--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="container px-2">
                   <img src="/robitechlogo.png" alt="Robitech Logo" height="36"> 
                  <a class="navbar-brand" href="#page-top" style="font-size: 1.7rem;" style="color:#0B0B45;"><b>ROBITECH SOLUTIONS</b></a>
-                        <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"  style="background-color:#0B0B45;"><b>MENU</b><span class="navbar-toggler-icon" style="color:black;"></span></button>
+                        <button class="navbar-toggler text-white bg-#0B0B45" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><b>MENU</b><span class="navbar-toggler-icon" style="color:black;"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about"><b>HOME</b></a></li>
@@ -100,7 +100,7 @@
            <p class="py-3"  style="color:#0B0B45;"> 
              <h1><b>Website Maintenance</b></h1>                 
              In case you are not conversant with website maintenance practices such as hosting or web content update, RobiTech Solutions can handle that at your budget.
-              <a class="btn btn-lg col-lg-8 justify-content-center bg-light text-black" href="#contact"><b>Get A Quote</b></a>   
+              <a class="btn btn-lg col-lg-8 justify-content-center bg-#0B0B45 text-black" href="#contact"><b>Get A Quote</b></a>   
            </p>
          </div>
         </section>
@@ -108,7 +108,7 @@
          <div class="container">
 <h2 style="color:#0B0B45;"><b>CONTACT ROBITECH SOLUTIONS</b></h2>
          <ul style="list-type: none;">                       
-          <li><i class="fa fa-phone" style="font-size: x-large;">  <b>+254718301634</b></i></li>
+          <li><i class="fa fa-phone" style="font-size: x-large;"><b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div> 
        </section>
