--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <body id="page-top" style="background-color:grey;>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav style="">
-            <div class="container px-2">
+            <div class="container px-1">
                   <img src="/robitechlogo.png" alt="Robitech Logo" height="36"> 
                  <a class="navbar-brand" href="#page-top" style="font-size: 1.7rem;" style="color:#0B0B45;"><b>ROBITECH SOLUTIONS</b></a>
-                        <button class="navbar-toggler text-white bg-#0B0B45" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><b>MENU</b><span class="navbar-toggler-icon" style="color:black;"></span></button>
+                        <button class="navbar-toggler text-white bg-black type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><b>MENU</b><span class="navbar-toggler-icon" style="color:black;"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about"><b>HOME</b></a></li>
@@ -40,7 +40,7 @@
         <div class="fluid-container justify-items-center py-4" >
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
-            <a class="btn btn-lg col-lg-8 justify-content-center text-white" href="#about"  style="color:#0B0B45;"><b>See Home Page</b></a>
+            <a class="btn btn-lg col-lg-8 justify-content-center text-white" href="#about"  style="background-color:#0B0B45;"><b>See Home Page</b></a>
             <b style="font-size: 0.5rem;">Need help? Chat me.</b>
             <a href="https://wa.me/254718301634"  style="font-size: 1.6rem; color:#1F51FF;"><i class="fa fa-whatsapp"></i></a>                                                                                    
             <br>
@@ -100,7 +100,7 @@
            <p class="py-3"  style="color:#0B0B45;"> 
              <h1><b>Website Maintenance</b></h1>                 
              In case you are not conversant with website maintenance practices such as hosting or web content update, RobiTech Solutions can handle that at your budget.
-              <a class="btn btn-lg col-lg-8 justify-content-center bg-#0B0B45 text-black" href="#contact"><b>Get A Quote</b></a>   
+              <a class="btn btn-lg col-lg-8 justify-content-center bg-black text-white" href="#contact"><b>Get A Quote</b></a>   
            </p>
          </div>
         </section>
