--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         </nav>
         <!-- Header-->
         <div class="fluid-container justify-items-center py-2" >
-            <section class="text-center justify-items-center" ">
- <div class="container" style="color:#0B0B45; background-color: white; font-size: x-large;">
+ <div class="container text-center" style="color:#0B0B45; background-color: white; font-size: xx-large;">
    <b>
        I make your business, brand or portfolio known globally. I bring more clients to your doorstep. Get that stunning website.
    </b>
