--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
         <!-- Header-->
         <div class="fluid-container justify-items-center py-2" >
- <div class="container text-center" style="color:#0B0B45; background-image: url(/robert.jpeg); background-repeat: no-repeat; background-position: inherit; opacity: 0.8; font-size: xx-large;">
+ <div class="container text-center" style="color:#0B0B45; background-image: url'(/robert.jpeg)'; background-repeat: no-repeat; background-position: center; opacity: 0.8; font-size: xx-large;">
    <b>
        I make your business, brand or portfolio known globally. I bring more clients to your doorstep. Get that stunning website.
    </b>
