--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@
           <li><i class="fa fa-phone" style="font-size: x-large;"><b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div>
-            <div class="flex items-center min-h-screen container" style="background-color:#0B0B45;">
+            <div class="flex items-center min-h-screen container" >
     <div class="container mx-auto">
-      <div class="max-w-md mx-auto my-10 bg-white p-5 rounded-md shadow-sm">
+      <div class="max-w-md mx-auto my-10 p-5 rounded-md shadow-sm" style="background-color:#0B0B45;" >
         <div class="text-center">
           <h1 class="my-3 text-3xl font-semibold text-white-700 dark:text-gray-200">
             <b>Keep in touch</b>
           </h1>
           <p class="text-white-400 dark:text-gray-400">
-            <b>Please fill in the form. I promise I won't spam your inbox</b>
+            <b>Please fill in the form for useful updates and insights. I promise I won't spam your inbox</b>
           </p>
         </div>
         <div class="m-7">
