--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <div class="container mx-auto">
       <div class="max-w-md mx-auto my-10 p-5 rounded-md shadow-sm" style="background-color:#0B0B45;" >
         <div class="text-center">
-          <h1 class="my-3 text-3xl font-semibold text-white-700">
+          <h1 class="my-3 text-3xl font-semibold text-white">
             <b>Keep in touch</b>
           </h1>
           <p class="text-white-400">
