--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
           <ul>
               <li>Social media integration</li>
               <li>Content development</li>
+              <li>Contact-Form integration</li>
               <li>Hosting & domain for the first one year</li>
               <li>Publishing on Google Search Console</li>
           </ul>
@@ -92,7 +93,7 @@
               <li>Social media integration</li>
               <li>Hosting & domain for the first one year</li>
               <li>Content development</li>
-              <li>Social media integration</li>
+              <li>Contact-Form integration</li>
               <li>Full Search Engine Optimization</li>
               <li>Google Analytics integration</li>
               <li>Publishing on Google Search Console</li>
@@ -109,6 +110,7 @@
                   <li>Social media integration</li>
                   <li>Domain & hosting for the first year</li>
                   <li>Content development</li>
+                  <li>Contact-Form integration</li>
                   <li>GoogleMyBusiness integration</li>
                   <li>MPESA/PayPal integration</li>
                   <li>Google Analytics integration</li>
