--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <b>Keep in touch</b>
           </h1>
           <p class="text-white">
-            <b>Please fill in the form for useful updates and insights. I promise I won't spam your inbox</b>
+            Please fill in the form for useful updates and insights. I promise I won't spam your inbox
           </p>
         </div>
         <div class="m-7">
