--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <li><i class="fa fa-phone" style="font-size: x-large;"><b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div>
-            <div class="flex items-center min-h-screen container py-2" >
+            <div class="flex items-center min-h-screen container pxy-3" >
     <div class="container mx-auto">
       <div class="max-w-md mx-auto my-10 p-5 rounded-md shadow-sm" style="background-color:#0B0B45;" >
         <div class="text-center py-2">
