--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="card-header text-white" style="background-color:#0B0B45;">
         <b>Portfolio Websites</b>
         </div>
-        <div class="card-body text-white" style="background-color:#0B0B45;">
+        <div class="card-body text-sm text-white" style="background-color:#0B0B45;">
           <ul>
               <li>Social media integration</li>
               <li>Content development</li>
@@ -88,7 +88,7 @@
     <div class="card-header text-white" style="background-color:#0B0B45;">
         <b>Branding Websites</b>
         </div>
-        <div class="card-body text-white" style="background-color:#0B0B45;">
+        <div class="card-body text-sm text-white" style="background-color:#0B0B45;">
           <ul>
               <li>Social media integration</li>
               <li>Hosting & domain for the first one year</li>
@@ -105,7 +105,7 @@
         <div class="card-header text-white" style="background-color:#0B0B45;">
             <b>Business Websites</b>
             </div>
-            <div class="card-body text-white" style="background-color:#0B0B45;">
+            <div class="card-body text-sm text-white" style="background-color:#0B0B45;">
               <ul>
                   <li>Social media integration</li>
                   <li>Domain & hosting for the first year</li>
