--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav style="">
             <div class="container px-1">
                   <h6 style="font-size: 2rem;"><span style="font-weight: 800; color: black;">r</span><span><i class="fa fa-globe" style="font-weight: 800; color: #0B0B45;"></i></span><span style="font-weight: 800; font-size: 2rem; color: black;">bi</span><span style="font-weight: 800; color: #0B0B45;">web</span></h6> 
-                 <a class="navbar-brand" href="#page-top" style="font-size: 1.7rem;" style="color:#0B0B45;"><b>ROBITECH SOLUTIONS</b></a>
+                 <a class="navbar-brand" href="#page-top" style="font-size: 1.7rem; color: #0B0B45;"><b>ROBIWEB MARKETING</b></a>
                         <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"  style="background-color:#0B0B45;"><b>MENU</b><span class="navbar-toggler-icon" style="color:black;"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
@@ -38,18 +38,15 @@
         <!-- Header-->
         <div class="fluid-container justify-items-center py-2" >
  <div class="container text-center" style="color:#0B0B45; background-image: url(/robert.jpeg); background-repeat: no-repeat; background-position: center; opacity: 0.8; background-size: cover; font-size: xx-large;">
-   <b data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation="slide-in-left">
-       I make your business, brand or portfolio known globally. I bring more clients to your doorstep. Get that stunning website.
-   </b>
+   <p data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation="slide-in-left" style="font-size: 3rem;">
+    Your quick web designer and intuitive online marketer.
+   </p>    
  </div>
- <br>
             <a class="btn btn-lg col-lg-8 justify-content-center text-white" href="#about"  style="background-color:#0B0B45;"><b>See Home Page</b></a>
-            <b style="font-size: 0.5rem;">Need help? Chat me.</b>
-            <a href="https://wa.me/254718301634"  style="font-size: 1.6rem; color:#1F51FF;"><i class="fa fa-whatsapp"></i></a>                                                                                    
-            <br>
-            <b style="color:#1F51FF;">Follow Me</b>                                                                                                                                                                                                 
-            <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style=" color: black; font-size: 2rem;"></i></a>
-            <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="color: black; font-size: 2rem;"></i></a>
+          <div style="display: block;">      
+            <a href="https://wa.me/254718301634"  style="font-size: 2rem; " style=" display: inline-block;"><i class="fa fa-whatsapp"></i></a>                                                                                                                                                                                                                                                                                     
+            <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style=" color: black; font-size: 2rem; display: inline-block;"></i></a>
+            <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="color: black; font-size: 2rem; display: inline-block;"></i></a>
          </div>  
         <section class="fluid-container justify-items-center  py-2" id="about">
          <div class="container">
@@ -65,7 +62,7 @@
             <h1><b>Web Design</b></h1>
          <p>
             A great brand or business deserves a modern web page that will reach a greater audience out there. Robiweb Marketing will develop a beautiful and search engine optimised business website that will draw more traffic to your social media pages and YouTube channel.
-          Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Why not try RobiTech Solutions?
+          Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Why not try Robiweb Marketing?
              Check out the pricing.
         </p>
   <div class="card px-3">
