--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     </head>
     <body id="page-top" style="background-color:grey; font-family: monospace;">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav style="">
+        <nav class="navbar navbar-expand-lg navbar-dark" id="mainNav style="">
             <div class="container px-1">
-                  <h6 style="font-size: 1rem;"><span style="font-weight: 800; color: black;">r</span><span><i class="fa fa-globe" style="font-weight: 800; color: #0B0B45;"></i></span><span style="font-weight: 800; font-size: 1rem; color: black;">bi</span><span style="font-weight: 800; color: #0B0B45;">web</span></h6> 
-                 <a class="navbar-brand" href="#page-top" style="font-size: 1rem; color: #0B0B45;"><b>ROBIWEB MARKETING</b></a>
+                  <h6 style="font-size: 2rem;"><span style="font-weight: 800; color: black;">r</span><span><i class="fa fa-globe" style="font-weight: 800; color: #0B0B45;"></i></span><span style="font-weight: 800; font-size: 2rem; color: black;">bi</span><span style="font-weight: 800; color: #0B0B45;">web</span></h6> 
+                 <a class="navbar-brand" href="#page-top" style="font-size: 2rem; color: #0B0B45;"><b>ROBIWEB MARKETING</b></a>
                         <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"  style="background-color:#0B0B45;"><b>MENU</b><span class="navbar-toggler-icon" style="color:black;"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
@@ -37,15 +37,14 @@
         <!-- Header-->
         <div class="fluid-container justify-items-center py-2" >
  <div class="container text-center" style="color:#0B0B45; background-image: url(/robert.jpeg); background-repeat: no-repeat; background-position: center; opacity: 0.8; background-size: cover; font-size: xx-large;">
-   <p data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation="slide-in-left" style="font-size: 3rem;">
+   <p data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation="slide-in-left" style="font-size: 2rem;">
     Your quick web designer and intuitive online marketer.
    </p>    
  </div>
             <a class="btn btn-lg col-lg-8 justify-content-center text-white" href="#about"  style="background-color:#0B0B45;"><b>See Home Page</b></a>
           <div style="display: block;">      
-            <a href="https://wa.me/254718301634"  style="font-size: 2rem; " style=" display: inline-block;"><i class="fa fa-whatsapp"></i></a>                                                                                                                                                                                                                                                                                     
-            <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style=" color: black; font-size: 2rem; display: inline-block;"></i></a>
-            <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="color: black; font-size: 2rem; display: inline-block;"></i></a>
+            <a href="https://wa.me/254718301634"  style="font-size: 3rem; " style=" display: inline-block;"><i class="fa fa-whatsapp py-2"></i></a>                                                                                                                                                                                                                                                                                     
+            <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style=" color: black; font-size: 3rem; display: inline-block;"></i></a>
          </div>  
         <section class="fluid-container justify-items-center  py-2" id="about">
          <div class="container">
